--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/config": "^1.0.2",
     "@nestjs/core": "^7.6.15",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/schedule": "^1.0.1",
     "@nestjs/swagger": "^4.8.2",
     "@nestjs/typeorm": "^8.0.2",
     "luxon": "^2.0.2",
@@ -44,6 +45,7 @@
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
+    "@types/cron": "^1.7.3",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/luxon": "^2.0.5",
