--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
     "swagger-ui-express": "^4.1.6",
-    "typeorm": "^0.2.38"
+    "typeorm": "^0.2.38",
+    "ts-node": "^9.1.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
@@ -63,7 +64,6 @@
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
     "ts-loader": "^8.0.18",
-    "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.3"
   },
