--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "rxjs": "^7.4.0",
     "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.38",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
@@ -64,8 +65,7 @@
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
     "ts-loader": "^8.0.18",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.2.3"
+    "tsconfig-paths": "^3.9.0"
   },
   "jest": {
     "moduleFileExtensions": [
