--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.38",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "tsconfig-paths": "^3.9.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
@@ -64,8 +65,7 @@
     "prettier": "^2.2.1",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
-    "ts-loader": "^8.0.18",
-    "tsconfig-paths": "^3.9.0"
+    "ts-loader": "^8.0.18"
   },
   "jest": {
     "moduleFileExtensions": [
