--- a/package.json
+++ b/package.json
@@ -33,16 +33,19 @@
     "@nestjs/schedule": "^1.0.1",
     "@nestjs/swagger": "^4.8.2",
     "@nestjs/typeorm": "^8.0.2",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
+    "joi": "^17.4.2",
     "luxon": "^2.0.2",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
     "swagger-ui-express": "^4.1.6",
-    "typeorm": "^0.2.38",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.3",
-    "tsconfig-paths": "^3.9.0"
+    "tsconfig-paths": "^3.9.0",
+    "typeorm": "^0.2.38",
+    "typescript": "^4.2.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
@@ -51,6 +54,7 @@
     "@types/cron": "^1.7.3",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
+    "@types/joi": "^17.2.3",
     "@types/luxon": "^2.0.5",
     "@types/node": "^14.14.36",
     "@types/supertest": "^2.0.10",
